# Iapetus

./: .gitignore  README.md  agendas.md  main.py  pyproject.toml
config/: app_config.py  local.example.toml  local.toml.example
data/curated/: android_fixture_samples_seed.json  android_permissions_seed.json  android_static_tokens_seed.json
data/import_contracts/: android_concept_lessons.jsonl  android_knowledge_eval_questions.jsonl  attack_mobile_seed_mappings.jsonl  benign_app_archetypes.jsonl  malware_type_patterns.jsonl  permission_authority_facts.jsonl  permission_pattern_examples.jsonl
docs/: architecture_wiring.md  bad_data_hardening.md  database.md  deep_learning_seed.md  future_integration_notes.md  knowledge_seed_notes.md  label_schema.md  m6_learning_index.md  platform_vision.md
modules/: banner.py  utils.py
scanning/: scanning_menu.py  scanning_operations.py
scripts/: dev.ps1  rename_modules_phase2.py
sql/: 001_init_kernel_schema.sql
targeting/: target_manager.py  targeting.py
tests/: test_adversarial_fixtures.py  test_concept_trainer.py  test_connectors.py  test_database.py  test_database_core.py  test_database_db_cli.py  test_deep_learning.py  test_device_probe.py  test_doctor.py  test_edge_cases.py  test_environment_probe.py  test_import_contracts.py  test_knowledge.py  test_knowledge_eval.py  test_label_renderer.py  test_learning.py  test_learning_registry.py  test_menu.py  test_paths_config.py  test_probe_command.py  test_regex_audit.py  test_run_artifacts.py  test_snapshot_curated.py  test_snapshot_demo.py  test_training_corpus.py
(+125 files in other folders)
